fixed line height on mobile

--- a/css/about.css
+++ b/css/about.css
@@ -66,5 +66,6 @@ span.highlight {
     }
     .about p {
     font-size: 16px;
+	line-height: 35px;
     }
 }
